src/main/resources/css/style.css
/*
 * Style for Scrumbledore.
 * A faithful recreation of Bubble Bobble.
 * 
 * @author David Alderliesten.
 */
 
 .root {
 	-fx-background-color: #1d1d1d;
 }
 
 .hbox {
 	-fx-background-color: #1d1d1d;
 }
 
 .label {
 	-fx-text-fill: #f5f5f5;
 	-fx-font-size: 15.0px;
    -fx-font-weight: bold;
 }

